tempfile/derive_more/tests/compile_fail/as_mut/struct_attr_multiple_fields.rs
#[derive(derive_more::AsMut)]
#[as_mut(forward)]
struct Foo {
    bar: i32,
    baz: f32,
}

fn main() {}
